--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>8</java.version>
 
+<!--        &lt;!&ndash; set thymeleaf version &ndash;&gt;-->
+<!--        <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>-->
+<!--        <thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>-->
 
         <jdbc-mysql.version>8.0.11</jdbc-mysql.version>
         <druid.version>1.1.21</druid.version>
@@ -37,6 +40,8 @@
         <hutool.version>5.1.2</hutool.version>
 
         <swagger.version>2.8.0</swagger.version>
+
+        <thymeleaf-layout-dialect.version>2.0.0</thymeleaf-layout-dialect.version>
     </properties>
 
 
@@ -50,6 +55,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${druid.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
+        <!--模板引擎-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.3.2.RELEASE</version>
         </dependency>
 
         <!-- 数据库连接池 start -->
@@ -110,11 +127,6 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
     </dependencies>
